tests/miniJava/neg/000186_mutation.MiniJava
class java { public static 0 Main ( String [ ] java ) { { } } }
